--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -312,7 +312,7 @@ In my idea, although I also think of it as an "entropy-based approach", the actu
 In BLT, the quantity used is the *conditional entropy* $H(x_t | x_0, \ldots, x_{t-1})$.
 
 The intuition in both is that segmentations should happen if the model is "surprised" by the next token.
-But surprise is better measured by the former quantity, not the latter.
+But surprise is better measured by the former quantity, not the latter!
 A concrete example is any conditional distribution that puts most of its mass on one vocab word $w$;
 this conditional distribution would have very low entropy and so the conditional entropy heuristic would never create a new chunk.
 But in the rare event that the actual next word is a different word $v \neq w$,
@@ -335,12 +335,13 @@ Since I expect to get a lot of questions about how H-Net compares against BLT, I
 We can roughly factor the overall design of this family of hierarchical models into two parts:
 (1) the *chunking strategy* (2) the *architecture*
 
+<br>
 #### Chunking
 The chunking strategy is the core, and is the focus of both of these papers.
-The main advantage of H-Net is that it's *actually end-to-end*.
+The main advantage of H-Net is that it's *actually end-to-end*, learning the strategy together with the model.
 
 Additionally, the entropy-based approach of BLT has some intrinsic weaknesses: 
-- It requires significant extra work (to train an auxiliary conditional prediction model)
+- It requires significant extra work (to train an auxiliary conditional prediction model).
 - It can't be nested into deeper hierarchies, which was one of the core motivations of H-Net and we showed significantly improved performance. In every experiment we compared, we found H-Net (2-stage) > H-Net (1-stage).
 
 [//]: # - It requires significant extra tuning (there are a few variants of the heuristics for how to create the chunks; my information-based approach describing this blog is yet another variant that hasn't been explored)
@@ -352,12 +353,14 @@ Some evidence of this is Figure 6 of the BLT paper itself.
 Note that the advantage of BLT over SpaceByte is that the entropy strategy is *more flexible*: it can be applied to languages without delimiter-based segmentation strategies, or potentially even non-discrete sequences of data. 
 However, it's still strictly less flexible than the dynamic chunking (DC) mechanism of H-Net, so I don't think there are any advantages.
 
+<br>
 #### Architecture
 The architectural components of the models are generally orthogonal to the chunking strategy.
 BLT introduced a number of unusual components, such as a new type of chunk-aware cross-attention layer,
 and large tables of "hash n-gram embeddings".
 We think both of these are unnecessarily complicated; H-Net works just fine without these additional techniques, although I believe that they could also be incorporated into H-Net if desired.
 
+<br>
 So overall, we felt that the full BLT model was an overly complicated baseline to set up and compare against, and (as explained in the paper) we used SpaceByte as a representative example of BLT-like models.
 But I still like the idea of BLT and I'm glad they published it!
 
