Edits on BLT comparison

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -298,7 +298,7 @@ So we didn't go with it. Alas 🥲
 By December, we had made a lot of progress and pretty much had the main architecture done (in particular, Sukjun had come up with the *smoothing module* which at the time we were calling the "EMA detokenizer"; as we show in the paper's ablations, this was one of the most important new techniques introduced).
 
 At this point, the [Byte Latent Transformer (BLT)](https://arxiv.org/abs/2412.09871) <d-cite key="pagnoni2024byte"></d-cite> paper came out, which made a big splash for claiming to solve tokenization end-to-end, through a similar hierarchical architecture using an entropy-based segmentation rule.
-(Actually, DPT above already proposed similar entropy heuristics, but didn't execute it as well.)
+(Actually, DPT above already proposed similar entropy heuristics, but BLT executed it better.)
 I think the terminology is a little confusing because they indeed built a model operating "end-to-end" on bytes, but to me, the crux of the problem is *learning the dynamic boundaries* jointly with the model itself.
 This is not possible (at least not obviously) with the entropy heuristic and is the main reason why we didn't explore this approach.
 In the H-Net paper, we specifically use "end-to-end" to refer to the stronger definition.
@@ -326,11 +326,15 @@ Maybe I'm missing something, or for some reason empirically it just works better
 [//]: # After BLT came out, we had the thought to just clean up our (pretty reasonable already at the time) results and put out a pre-print quickly. But we decided to follow our principles: put our heads down and keep working in the direction we believe in, and wait to put something out when it was done in the ideal way we wanted, instead of worrying about community perception.
 
 {% details H-Net vs. BLT %}
-Since I expect to get a lot of questions about how H-Net compares against BLT, I'll be really explicit here. Happy to be corrected by the BLT authors (or anyone else) if I say anything incorrect!
+We expected to get a lot of questions about BLT since it's currently the most well-known tokenizer-free method;
+and indeed after releasing H-Net we have already gotten a lot of questions about the comparison.
+So I decided to add this note just to have a place to point to for those asking for a direct comparison,
+although it's out of the way of the main story.
+I'll be pretty explicit here -- but very happy to be corrected by the authors (or anyone else) if I say anything incorrect!
 
 **tl;dr**
 - BLT is not actually end-to-end
-- H-Net should both be much easier to use and perform better than BLT
+- H-Net should both be easier to use and perform better than BLT
 
 We can roughly factor the overall design of this family of hierarchical models into two parts:
 (1) the *chunking strategy* (2) the *architecture*
@@ -338,11 +342,11 @@ We can roughly factor the overall design of this family of hierarchical models i
 <br>
 #### Chunking
 The chunking strategy is the core, and is the focus of both of these papers.
-The main advantage of H-Net is that it's *actually end-to-end*, learning the strategy together with the model.
+The main advantage of H-Net is that it's *actually end-to-end*, able to learn the chunking strategy together with the model.
 
 Additionally, the entropy-based approach of BLT has some intrinsic weaknesses: 
 - It requires significant extra work (to train an auxiliary conditional prediction model).
-- It can't be nested into deeper hierarchies, which was one of the core motivations of H-Net and we showed significantly improved performance. In every experiment we compared, we found H-Net (2-stage) > H-Net (1-stage).
+- It can't be nested into deeper hierarchies, which was one of the core motivations of H-Net and we showed significantly improved performance: in all our experiments, we found H-Net (2-stage) > H-Net (1-stage).
 
 [//]: # - It requires significant extra tuning (there are a few variants of the heuristics for how to create the chunks; my information-based approach describing this blog is yet another variant that hasn't been explored)
 
@@ -350,20 +354,21 @@ In the H-Net paper, we used [SpaceByte](https://arxiv.org/abs/2404.14408) <d-cit
 Instead of an entropy heuristic, SpaceByte simply chunks on certain delimiters in the text.
 For languages like English, we believe that SpaceByte performs quite comparably to the entropy chunking strategy of BLT.
 Some evidence of this is Figure 6 of the BLT paper itself.
-Note that the advantage of BLT over SpaceByte is that the entropy strategy is *more flexible*: it can be applied to languages without delimiter-based segmentation strategies, or potentially even non-discrete sequences of data. 
-However, it's still strictly less flexible than the dynamic chunking (DC) mechanism of H-Net, so I don't think there are any advantages.
+Note that the advantage of BLT over SpaceByte is that the entropy strategy is *more flexible*: it can be applied to languages without delimiter-based segmentation strategies, or potentially even non-discrete sequences of data.
+However, it's still strictly less flexible than the dynamic chunking (DC) mechanism of H-Net.
+The only advantage I can think of for entropy/information-based chunking is that
+perhaps it could be easier to prove theoretical guarantees for learnability of the main network?
 
 <br>
 #### Architecture
 The architectural components of the models are generally orthogonal to the chunking strategy.
-BLT introduced a number of unusual components, such as a new type of chunk-aware cross-attention layer,
+BLT introduced a number of unique components, such as a new type of chunk-aware cross-attention layer,
 and large tables of "hash n-gram embeddings".
-We think both of these are unnecessarily complicated; H-Net works just fine without these additional techniques, although I believe that they could also be incorporated into H-Net if desired.
+We think both of these are not necessary; H-Net works just fine without these additional techniques, although I believe that they could also be incorporated into H-Net if desired.
 
 <br>
-So overall, we felt that the full BLT model was an overly complicated baseline to set up and compare against, and (as explained in the paper) we used SpaceByte as a representative example of BLT-like models.
-But I still like the idea of BLT and I'm glad they published it!
-
+So overall, we felt that the full BLT model is an overly complicated baseline to set up and compare against, and (as explained in the paper) we used SpaceByte as a representative example of BLT-like models.
+But I still like the idea of BLT and I'm glad it's published!
 {% enddetails %}
 
 
