Edits and add BLT figure

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -227,12 +227,12 @@ Fortunately, Sukjun refused to listen to me because he had a much better idea! (
 He wanted to try something loosely inspired by mixture-of-experts (MoE), the idea being that MoE (where each token gets "routed" to a fixed set of $k$ "experts") is essentially a discrete selection problem like the one we want to solve.
 
 The main advantage of this approach is that it provides some hope for building a *differentiable* chunking strategy in an end-to-end model, unlike my information-based heuristic which would require training a separate proxy model first.
-At the time, I actually basically didn't know anything at all how MoE worked, so I left Sukjun to his own devices for a long time,
+At the time, I actually basically didn't know anything at all about how MoE worked, so I left Sukjun to his own devices for a long time,
 and he got the main ideas working relatively quickly.
 But there were a lot of really confusing training behaviors and instabilities, so he spent a long time building intuition and slowly improving the model.
 
 Incidentally, it's kind of interesting to me how obvious in hindsight, but not in foresight, the main idea is.
-As this project developed, and I told a bunch of people about it, their reaction usually went from "this differentiable selection problem seems impossible" to "oh yeah that might work" as soon as I mentioned the connection to MoE being another variant of a discrete-selection problem.
+As this project developed, and I told a bunch of people about it, their reaction usually went from "this differentiable selection problem seems impossible" to "oh yeah that might work" as soon as I mentioned the connection to MoE being another variant of a discrete-selection problem. (But as we'll see, it's much harder than just straight up applying MoE!)
 
 <div class="row mt-3">
   <div class="col-sm mt-3 mt-md-0">
@@ -243,7 +243,7 @@ As this project developed, and I told a bunch of people about it, their reaction
   </div>
 </div>
 <div class="caption">
-Found some random whiteboard pictures from late 2024. Looks like on the left we were trying to figure out how to improve signal propagation into the router weights, including considering tricks like norm layers, straight-through estimator, and Gumbel noise. On the right we had just added the <i>per-network norms</i> idea from the paper and also had to properly rescale the initialization of each layer accordingly to balance (I just realized we might have forgotten to report this in the paper; there were <i>so many details</i> to get right, although all motivated by first principles).
+Found some random whiteboard pictures from late 2024. Looks like on the left we were trying to figure out how to improve signal propagation into the router weights, including considering techniques like norm layers, straight-through estimator, and Gumbel noise. On the right we had just added the <i>per-network norms</i> idea from the paper and also had to properly rescale the initialization of each layer accordingly to balance (I just realized we might have forgotten to report this in the paper; there were <i>so many details</i> to get right, although all motivated by first principles).
 </div>
 
 ## Discovering Prior and Concurrent Works
@@ -263,7 +263,7 @@ This was very similar to Sukjun's idea, but he called it a router (inspired by M
 {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/hourglass.png" caption="The Hourglass Transformer" %}
 
 Their motivation for how to overcome the discrete-choice problem was delegating to stochastic reparametrization techniques, namely the Gumbel-softmax trick <d-cite key="maddison2017concrete"></d-cite> <d-cite key="jang2017categorical"></d-cite>.
-In their paper, this fully end-to-end version seemed promising but not ideal; it had stability issues and underperformed their alternative variants that relied on more heuristics and supervision.
+In their paper, this fully end-to-end version seemed promising but not perfect; it had stability issues and underperformed their alternative variants that relied on more heuristics and supervision.
 Ultimately, I guess that DPT attempted to tackle this problem somewhat prematurely and important ideas weren't available yet (for example, the most popular [Switch Transformer](https://arxiv.org/abs/2101.03961) MoE method <d-cite key="fedus2022switch"></d-cite>  was pretty new and perhaps not as established yet).
 But I think this paper deserves more credit for at least making a real attempt at this problem!
 
@@ -311,10 +311,10 @@ Since I'm not going to work on this approach, I might as well put it here.
 In my idea, although I also think of it as an "entropy-based approach", the actual quantity used to determine chunk boundaries is the *information content* or negative log-likelihood of the next token.
 In BLT, the quantity used is the *conditional entropy* $H(x_t | x_0, \ldots, x_{t-1})$.
 
-The intuition in both is that segmentations should happen if the model is "surprised" by the next token.
-But surprise is better measured by the former quantity, not the latter!
+The intuition in both is that segmentations should happen if the model is "surprised" by the next token, or if the current chunk has "enough information".
+But surprise/information is better measured by the former quantity, not the latter!
 A concrete example is any conditional distribution that puts most of its mass on one vocab word $w$;
-this conditional distribution would have very low entropy and so the conditional entropy heuristic would never create a new chunk.
+this conditional distribution would have very low conditional entropy and so any entropy-based heuristic would never create a new chunk.
 But in the rare event that the actual next word is a different word $v \neq w$,
 the model should be *very* surprised and draw a boundary.
 The negative log-likelihood captures this actual information content.
@@ -337,7 +337,7 @@ I'll be pretty explicit here -- but very happy to be corrected by the authors (o
 - H-Net should both be easier to use and perform better than BLT
 
 We can roughly factor the overall design of this family of hierarchical models into two parts:
-(1) the *chunking strategy* (2) the *architecture*
+(1) the *chunking strategy* (2) the *architecture*.
 
 <br>
 #### Chunking
@@ -345,19 +345,34 @@ The chunking strategy is the core, and is the focus of both of these papers.
 The main advantage of H-Net is that it's *actually end-to-end*, able to learn the chunking strategy together with the model.
 
 Additionally, the entropy-based approach of BLT has some intrinsic weaknesses: 
-- It requires significant extra work (to train an auxiliary conditional prediction model).
+- It requires significant extra work (to train an auxiliary conditional entropy model).
 - It can't be nested into deeper hierarchies, which was one of the core motivations of H-Net and we showed significantly improved performance: in all our experiments, we found H-Net (2-stage) > H-Net (1-stage).
 
 [//]: # - It requires significant extra tuning (there are a few variants of the heuristics for how to create the chunks; my information-based approach describing this blog is yet another variant that hasn't been explored)
 
 In the H-Net paper, we used [SpaceByte](https://arxiv.org/abs/2404.14408) <d-cite key="slagle2024spacebyte"></d-cite> as a baseline instead.
-Instead of an entropy heuristic, SpaceByte simply chunks on certain delimiters in the text.
+Instead of an entropy heuristic, SpaceByte simply chunks on certain delimiters in the text such as spaces.
 For languages like English, we believe that SpaceByte performs quite comparably to the entropy chunking strategy of BLT.
 Some evidence of this is Figure 6 of the BLT paper itself.
+
+<div class="row mt-3">
+  <div class="col-sm mt-3 mt-md-0">
+    {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/blt_compute_op_space.png" %}
+  </div>
+  <div class="col-sm mt-3 mt-md-0">
+    {% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/blt_compute_op_entropy.png" %}
+  </div>
+</div>
+<div class="caption">
+On the left, BLT Space is much better than SpaceByte, showing the effect of BLT's architectural changes.
+(H-Net shows similar ablations, called "SpaceByte" vs. "SpaceByte++" vs. "H-Net (space)".)
+In terms of the core dynamic chunking mechanism, BLT Space looks pretty much on par with (or very close to) BLT Entropy.
+</div>
+
 Note that the advantage of BLT over SpaceByte is that the entropy strategy is *more flexible*: it can be applied to languages without delimiter-based segmentation strategies, or potentially even non-discrete sequences of data.
 However, it's still strictly less flexible than the dynamic chunking (DC) mechanism of H-Net.
 The only advantage I can think of for entropy/information-based chunking is that
-perhaps it could be easier to prove theoretical guarantees for learnability of the main network?
+perhaps it could be easier to prove certain flavors of [theory for tokenization](https://arxiv.org/abs/2404.08335) <d-cite key="rajaraman2024analysis"></d-cite>?
 
 <br>
 #### Architecture
@@ -384,7 +399,7 @@ For example (this is just a small subset),
 Although our final (current) design has a lot of moving parts, they all had concrete motivations,
 and are as simple as we could make it without sacrificing stability or performance.
 
-{% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/tuning.png" caption="A random slide from the deck of ideas involving multiple residual connections and extra stages/sub-networks, which remained as flags in the internal code for a long time." %}
+{% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/tuning.png" caption="A random slide from the deck of ideas involving multiple residual connections and extra stages/sub-networks, which remained as flags in the internal code for a long time. <br> This particular abomination was mine, which didn't work of course 😂" %}
 
 I haven't been able to run experiments personally in a while, and it was like watching an artist at work to see Sukjun improve the architecture steadily over time with multiple creative and essential ideas.
 I have to say that this was one of the most difficult empirical projects I've witnessed (and I think I'm somewhat decent at creating architectures 👀).
