--- a/assets/bibliography/albert.bib
+++ b/assets/bibliography/albert.bib
@@ -3223,7 +3223,7 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
 }
 
 @inproceedings{huang2025over,
-  title={Over-tokenized Transformer: Vocabulary is Generally Worth Scaling},
+  title={Over-Tokenized Transformer: Vocabulary is Generally Worth Scaling},
   author={Huang, Hongzhi and Zhu, Defa and Wu, Banggu and Zeng, Yutao and Wang, Ya and Min, Qiyang and Zhou, Xun},
   booktitle={The International Conference on Machine Learning (ICML)},
   year={2025}
@@ -3234,6 +3234,13 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
   author={Tao, Chaofan and Liu, Qian and Dou, Longxu and Muennighoff, Niklas and Wan, Zhongwei and Luo, Ping and Lin, Min and Wong, Ngai},
   booktitle={The Thirty-eighth Annual Conference on Neural Information Processing Systems},
   year={2024},
+}
+
+@article{liu2025superbpe,
+  title={Super{BPE}: Space Travel for Language Models},
+  author={Liu, Alisa and Hayase, Jonathan and Hofmann, Valentin and Oh, Sewoong and Smith, Noah A and Choi, Yejin},
+  journal={arXiv preprint arXiv:2503.13423},
+  year={2025}
 }
 
 @article{yuan2025native,
