--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -216,7 +216,7 @@ and I pitched the above approach as a concrete direction to get started.
 
 Some students got interested and started thinking about this.
 I was still very, very interested in the above approach about information-based chunking;
-[Ricardo Buitrago](https://www.linkedin.com/in/ricardobuitrago/) explored it a little bit but didn't get too far as he started working on another project on [length generalization in recurrent models](https://goombalab.github.io/blog/2025/improving-length-generalization/) <d-cite key="buitrago2025understanding"></d-cite> (I'm also very fond of this result!).<d-footnote>Actually, Ricardo did have a couple quite interesting results that didn't go into the H-Net paper but that we might figure out a way to. 
+[Ricardo Buitrago](https://www.linkedin.com/in/ricardobuitrago/) explored it a little bit but didn't get too far as he started working on another project on [length generalization in recurrent models](https://goombalab.github.io/blog/2025/improving-length-generalization/) <d-cite key="buitrago2025understanding"></d-cite> (I'm also very fond of this result!).<d-footnote>Actually, Ricardo did have a couple quite interesting results that didn't go into the H-Net paper but that we might try to figure out a way to talk about somewhere.</d-footnote>
 I kept trying to get Sukjun to try this approach as well, which I was convinced was a good idea...
 
 
@@ -226,7 +226,7 @@ Fortunately, Sukjun refused to listen to me because he had a much better idea! (
 
 He wanted to try something loosely inspired by mixture-of-experts (MoE), the idea being that MoE (where each token gets "routed" to a fixed set of $k$ "experts") is essentially a discrete selection problem like the one we want to solve.
 
-The main advantage of this approach is that it provides some hope for building a *differentiable* chunking strategy in an end-to-end model, unlike my information-based heuristic which would require training a separate proxy model first.
+The main advantage of this approach is that it provides some hope for building a *differentiable* chunking mechanism in an end-to-end model, unlike my information-based heuristic which would require training a separate proxy model first.
 At the time, I actually basically didn't know anything at all about how MoE worked, so I left Sukjun to his own devices for a long time,
 and he got the main ideas working relatively quickly.
 But there were a lot of really confusing training behaviors and instabilities, so he spent a long time building intuition and slowly improving the model.
@@ -243,7 +243,7 @@ As this project developed, and I told a bunch of people about it, their reaction
   </div>
 </div>
 <div class="caption">
-Found some random whiteboard pictures from late 2024. Looks like on the left we were trying to figure out how to improve signal propagation into the router weights, including considering techniques like norm layers, straight-through estimator, and Gumbel noise. On the right we had just added the <i>per-network norms</i> idea from the paper and also had to properly rescale the initialization of each layer accordingly to balance (I just realized we might have forgotten to report this in the paper; there were <i>so many details</i> to get right, although all motivated by first principles).
+Found some random whiteboard pictures from late 2024. Looks like on the left we were trying to figure out how to improve signal propagation into the router weights, including techniques like norm layers, straight-through estimator, and Gumbel noise. On the right we had just added the <i>per-network norms</i> idea from the paper and also had to properly rescale the initialization of each layer accordingly to balance (I just realized we might have forgotten to report this in the paper; there were <i>so many details</i> to get right, although all motivated by first principles).
 </div>
 
 ## Discovering Prior and Concurrent Works
