Add more comments to the whiteboard caption

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -243,7 +243,7 @@ As this project developed, and I told a bunch of people about it, their reaction
   </div>
 </div>
 <div class="caption">
-Found some random whiteboard pictures from late 2024. Looks like on the left we were trying to figure out how to improve signal propagation into the router weights, including techniques like norm layers, straight-through estimator, and Gumbel noise. On the right we had just added the <i>per-network norms</i> idea from the paper and also had to properly rescale the initialization of each layer accordingly to balance (I just realized we might have forgotten to report this in the paper; there were <i>so many details</i> to get right, although all motivated by first principles).
+Found some random whiteboard pictures from late 2024. Looks like on the left we were trying to figure out how to improve signal propagation into the router weights, including trying techniques like norm layers, straight-through estimator, and Gumbel noise. On the right we had just added the <i>per-network norms</i> idea from the paper and also had to properly rescale the initialization of each layer accordingly to balance (I just realized we might have forgotten to report this in the paper; there were <i>so many details</i> to get right, although all motivated by first principles). We were also trying a different idea of injecting a fresh set of input embeddings after the main network instead of using a residual; this was more stable and helped us get early versions working, but didn't allow multi-stage recursive chunking so it was abandoned relatively quickly.
 </div>
 
 ## Discovering Prior and Concurrent Works
