--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -243,7 +243,7 @@ As this project developed, and I told a bunch of people about it, their reaction
   </div>
 </div>
 <div class="caption">
-Found some random whiteboard pictures from late 2024. Looks like on the left we were trying to figure out how to improve signal propagation into the router weights, including trying techniques like norm layers, straight-through estimator, and Gumbel noise. On the right we had just added the <i>per-network norms</i> idea from the paper and also had to properly rescale the initialization of each layer accordingly to balance (I just realized we might have forgotten to report this in the paper; there were <i>so many details</i> to get right, although all motivated by first principles). We were also trying a different idea of injecting a fresh set of input embeddings after the main network instead of using a residual; this was more stable and helped us get early versions working, but didn't allow multi-stage recursive chunking so it was abandoned relatively quickly.
+Found some random whiteboard pictures from late 2024. Looks like on the left we were trying to figure out how to improve signal propagation into the router weights, including trying techniques like norm layers, straight-through estimator, and Gumbel noise. On the right we had just added the <i>per-network norms</i> idea from the paper and also had to properly rescale the initialization of each layer accordingly to balance (I just realized we might have forgotten to report this in the paper; there were <i>so many details</i> to get right, although all motivated by first principles). We were also trying a different idea of injecting a fresh set of input embeddings after the main network instead of using a residual; this was more stable and helped us get early versions working, but didn't allow multi-stage recursive chunking, one of my core goals of the model, so it was abandoned relatively quickly.
 </div>
 
 ## Discovering Prior and Concurrent Works
@@ -264,12 +264,12 @@ This was very similar to Sukjun's idea, but he called it a router (inspired by M
 
 Their motivation for how to overcome the discrete-choice problem was delegating to stochastic reparametrization techniques, namely the Gumbel-softmax trick <d-cite key="maddison2017concrete"></d-cite> <d-cite key="jang2017categorical"></d-cite>.
 In their paper, this fully end-to-end version seemed promising but not perfect; it had stability issues and underperformed their alternative variants that relied on more heuristics and supervision.
-Ultimately, I guess that DPT attempted to tackle this problem somewhat prematurely and important ideas weren't available yet (for example, the most popular [Switch Transformer](https://arxiv.org/abs/2101.03961) MoE method <d-cite key="fedus2022switch"></d-cite>  was pretty new and perhaps not as established yet).
+Ultimately, I guess that DPT attempted to tackle this problem somewhat prematurely and important ideas weren't available yet (for example, the most popular [Switch Transformer](https://arxiv.org/abs/2101.03961) MoE method <d-cite key="fedus2022switch"></d-cite>  was pretty new and perhaps not as established yet; neither was Mamba, which we found to be quite important).
 But I think this paper deserves more credit for at least making a real attempt at this problem!
 
 Actually, before we found this paper we had tried many variations of Gumbel noise already;
 I'm rather fond of the Gumbel-softmax trick myself and kept trying to get Sukjun to incorporate it.
-But it never seemed to help empirically 🥲.
+But it never seemed to help empirically 🥲
 
 
 {% details A missed naming opportunity %}
@@ -392,7 +392,7 @@ But I still like the idea of BLT and I'm glad it's published!
 I think the architecture has been relatively stable since early 2025, but we spent a long time trying to understand and simplify every part of it.
 For example (this is just a small subset),
 - **Architecture components**: our final architecture included post-norm layers at the end of every sub-network, as well as linear projections on the residual connection. We spent a long time trying to remove these since I felt like they were non-standard techniques (most U-Nets don't have these) that complicated the model. But in the end, they seem very useful---maybe essential---and we kept them.
-- **Sparsity auxiliary loss**: Our auxiliary loss targets a specific down-sampling ratio (Section 2.3 of the paper). This seems a little artificial to me and introduces an annoying new hyperparameter (thankfully, the only one!). I felt like it would be cleaner to simply impose a "sparsity loss" that encouraged higher compression rates (it would be counter-balanced by the main loss function which encourages more compute, hence lower compression rates). We found some things that sort of worked but it didn't seem as consistent, so for this version of the H-Net we kept the targeted "ratio loss".
+- **Sparsity auxiliary loss**: Our auxiliary loss targets a specific down-sampling ratio. This seems a little artificial to me and introduces an annoying new hyperparameter (thankfully, the only one!). I felt like it would be cleaner to simply impose a "sparsity loss" that encouraged higher compression rates (it would be counter-balanced by the main loss function which encourages more compute, hence lower compression rates). We found some things that sort of worked but it didn't seem as consistent, so for this version of the H-Net we kept the targeted "ratio loss".
 - **Chunking mechanisms**: We tried so many different variations of the routing module, upsampling step, downsampling step, smoothing module, and every other component. Sukjun's PowerPoint deck of ideas and variations has hundreds of slides, and we were only able to report a very small subset of ablations in the paper of things we did.
 - **Layer allocation**: Normal LLM scaling laws might be concerned with how to scale the width and depth of the model as the parameter count grows. But here, there are so many more choices for how many layers to put in each sub-network and how wide to make them and so on. Beyond that, the question of which layers to use (e.g. Transformer vs. Mamba) in each network is also not obvious, and required tons of experiments to understand (and I'm still not sure we have a completely clear grasp of how they predictably affect performance).
 
